--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ html {
   padding: 5px 10px;
   cursor: pointer;
   transition: background-color 0.3s;
+  color: black;
 }
 
 #play-button:hover {
@@ -51,6 +52,7 @@ html {
 
 .intro-text h2 {
   font-size: 3em;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
@@ -73,16 +75,15 @@ html {
 }
 
 .work-card {
-  background-color: #2f2f2f;
   padding: 20px;
-  margin: 10px auto;
+  padding-bottom: 0px;
+  margin: 15px auto;
   width: 80%;
   max-width: 600px;
   border-radius: 8px;
   font-size: 1.2em;
   transition: transform 0.2s;
   text-align: left;
-  color: white;
 }
 
 .work-card-header {
@@ -117,6 +118,74 @@ html {
 
 .work-card:hover {
   transform: scale(1.01);
+}
+
+.green-card {
+  background-color: #001700;
+  border: 2px dashed #32cd32;
+  color: #32cd32;
+}
+
+.red-card {
+  background-color: #220000;
+  border: 2px dashed #f11c17;
+  color: #f11c17;
+}
+
+.blue-card {
+  background-color: #010b24;
+  border: 2px dashed #0b71ee;
+  color: #0b71ee;
+}
+
+.green-card .work-date {
+  color: #24a321;
+}
+
+.red-card .work-date {
+  color: #c11613;
+}
+
+.blue-card .work-date {
+  color: #0f58cd;
+}
+
+.read-more-button {
+  font-size: 14px;
+  font-weight: bold;
+  border: none;
+  border-radius: 8px;
+  padding: 5px 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-top: 10px;
+}
+
+.green-button {
+  background-color: #32cd32;
+  color: #001700;
+}
+
+.green-button:hover {
+  background-color: #24a321;
+}
+
+.red-button {
+  background-color: #f11c17;
+  color: #220000;
+}
+
+.red-button:hover {
+  background-color: #c11613;
+}
+
+.blue-button {
+  background-color: #0b71ee;
+  color: #010b24;
+}
+
+.blue-button:hover {
+  background-color: #084cb7;
 }
 
 @keyframes fadeIn {
